--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-country-flag": "^2.0.2",
     "react-native-paper": "^5.12.5",
-    "react-native-svg": "^15.10.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-svg": "^15.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
